--- a/src/app/core/components/modals/item-desc/item-desc.component.scss
+++ b/src/app/core/components/modals/item-desc/item-desc.component.scss
@@ -1,55 +1,54 @@
-
 :host {
-    h2, h3{
-        font-family: Playfair Display;
-    }
-    body {
-        font-family: Montserrat,sans-serif;
-    }
+  h2,
+  h3 {
+    font-family: Playfair Display;
+  }
+  body {
+    font-family: Montserrat, sans-serif;
+  }
 }
-
 
 ion-datetime {
-     border: solid 1px #e4c683;
- }
-
+  border: solid 1px #e4c683;
+}
 
 .actionsPerson {
-    color:#e4c683;
-    cursor: pointer;
-    text-align: center;
-    transition: all ease 0.2s;
+  color: #e4c683;
+  cursor: pointer;
+  text-align: center;
+  transition: all ease 0.2s;
 }
 .actionsPerson:active {
-    color: #333;
+  color: #333;
 }
-  .img-title {
-    position: absolute;
-    width: 100%;
+.img-title {
+  position: absolute;
+  width: 100%;
 
-    left: 0;
-    bottom: 0;
-    text-align:center;
-    cursor: pointer;
-  }
-  .close {
-    text-shadow: 5px 2px 4px #574c4c;
-    cursor: pointer; margin: 0px; font-size: 20px;
-  }
-  .imgbkg{
-      padding: 5px;
-    background-image: url('./../../../../../assets/images/web/inicio-1.png')!important;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 200px;
-  
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  cursor: pointer;
+}
+.close {
+  text-shadow: 5px 2px 4px #574c4c;
+  cursor: pointer;
+  margin: 0px;
+  font-size: 20px;
+}
+.imgbkg {
+  padding: 5px;
+  background-image: url("./../../../../../assets/images/web/inicio-1.png") !important;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 200px;
 }
 
 .timer {
-    cursor: none;
-position: relative;
-bottom: -120px;
-background: rgba(51, 51, 51, 0.87);
-color:#fff;
+  cursor: none;
+  position: relative;
+  bottom: -120px;
+  background: rgba(51, 51, 51, 0.87);
+  color: #fff;
 }
