--- a/src/app/core/components/side-menu/side-menu.component.html
+++ b/src/app/core/components/side-menu/side-menu.component.html
@@ -1,19 +1,14 @@
 
 <ion-menu side="end" type="push" contentId="main">
   <ion-header>
-    <ion-toolbar color="danger">
-      <ion-title>Beauty Now</ion-title>
+    <ion-toolbar>
+      <ion-title></ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
     <ion-list>
-
-      <ion-item *ngIf="!isAuth" routerLink="/user" (click)="close()"><ion-icon name="person-circle-outline"></ion-icon> Mi Perfil</ion-item>
-      <ion-item *ngIf="isAuth" routerLink="/login" (click)="close()"><ion-icon name="log-in-outline"></ion-icon> Iniciar sesion</ion-item>
-      <ion-item (click)="close()">Menu Item</ion-item>
-      <ion-item (click)="close()">Menu Item</ion-item>
-      <ion-item (click)="close()">Menu Item</ion-item>
-
+      <ion-item *ngIf="authService.isAuthenticated" routerLink="/user" (click)="close()"><ion-icon name="person-circle-outline"></ion-icon> Mi Perfil</ion-item>
+      <ion-item *ngIf="!authService.isAuthenticated" routerLink="/login" (click)="close()"><ion-icon name="log-in-outline"></ion-icon> Iniciar sesion</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
