--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,27 +1,28 @@
-<ion-content  [fullscreen]="true">
+<ion-content [fullscreen]="true">
 
   <!-- maquillaje -->
-    <div class="panel" *ngFor="let category of serviceCategories"> <!-- agregar ng for para los servicios *ngFor="let servicio of services; index as i;"-->
-      <div class="category" (click)="category.panel=!category.panel">
-        <h3 class="panelTitle">{{category.name}}</h3> <!-- {{servicio.name}} -->
-        <ion-img src="../../../assets/images/services/categories/{{ category.id }}.png"></ion-img> <!-- {{servicio.img}} -->
+  <div class="panel" *ngFor="let category of serviceCategories">
+    <!-- agregar ng for para los servicios *ngFor="let servicio of services; index as i;"-->
+    <div class="category" (click)="category.panel=!category.panel">
+      <h3 class="panelTitle">{{category.name}}</h3> <!-- {{servicio.name}} -->
+      <ion-img src="../../../assets/images/services/categories/{{ category.id }}.png"></ion-img>
+      <!-- {{servicio.img}} -->
+    </div>
+    <div [ngStyle]="{display: !category.panel ? 'none': 'block'}">
+      <div *ngFor="let service of category.services">
+        <ion-list>
+          <ion-item button (click)="presentModal(service)">
+            <!-- *ngFor="let item of servicio.items" agregar ng for por itewm-->
+            <ion-avatar slot="start">
+              <img src="../../../assets/images/services/categories/{{ category.id }}.png">
+            </ion-avatar>
+            <ion-label>
+              <h2>{{service.name}}</h2>
+              <h1>${{service.public_price}}</h1>
+            </ion-label>
+          </ion-item>
+        </ion-list>
       </div>
-      <div [ngStyle]="{display: !category.panel ? 'none': 'block'}">
-        <div *ngFor="let service of category.services" >
-          <ion-list>
-            <ion-item button (click)="presentModal(service)"> <!-- *ngFor="let item of servicio.items" agregar ng for por itewm-->
-              <ion-avatar slot="start">
-                <img src="../../../assets/images/services/categories/{{ category.id }}.png">
-              </ion-avatar>
-              <ion-label>
-                <h2>{{service.name}}</h2>
-                <h1>${{service.public_price}}</h1>
-              </ion-label>
-            </ion-item>
-          </ion-list>
-        </div>
-      </div>
-      </div>
-  </ion-content>
-
-
+    </div>
+  </div>
+</ion-content>
