--- a/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
@@ -104,41 +104,47 @@
                       </ion-col>
                     </ion-row>
                     <ion-row>
-                      <ion-col size="6">
+                      <ion-col size="12">
                         <ion-item>
                           <ion-label>No. Int.</ion-label>
-                          <ion-input type="number" formControlName="noInt"></ion-input>
+                          <ion-input type="text" formControlName="noInt"></ion-input>
                         </ion-item>
                       </ion-col>
-                      <ion-col size="6">
+                      <ion-col size="12">
                         <ion-item>
                           <ion-label>No. Ext.</ion-label>
-                          <ion-input type="number" formControlName="noExt"></ion-input>
+                          <ion-input type="text" formControlName="noExt"></ion-input>
                         </ion-item>
                       </ion-col>
                     </ion-row>
                     <ion-row>
-                      <ion-col size="6">
+                      <ion-col size="12">
                         <ion-item>
                           <ion-label>C.P.</ion-label>
                           <ion-input type="number" formControlName="cp"></ion-input>
                         </ion-item>
                       </ion-col>
-                      <ion-col size="6">
+                  
+                    </ion-row>
+                    <ion-row>
+                      <ion-col size="12">
                         <ion-item>
                           <ion-label>Pa&iacute;s</ion-label>
-                          <ion-input formControlName="pais"></ion-input>
-                        </ion-item>
+                          <ion-select formControlName="pais">
+                            <ion-select-option value="MX">Mexico</ion-select-option>
+                            <ion-select-option value="USA">Estados Unidos</ion-select-option>                    
+                          </ion-select>
+                        </ion-item>                     
                       </ion-col>
                     </ion-row>
                     <ion-row>
-                      <ion-col size="6">
+                      <ion-col size="12">
                         <ion-item>
                           <ion-label>Estado</ion-label>
                           <ion-input formControlName="estado"></ion-input>
                         </ion-item>
                       </ion-col>
-                      <ion-col size="6">
+                      <ion-col size="12">
                         <ion-item>
                           <ion-label>Ciudad</ion-label>
                           <ion-input formControlName="ciudad"></ion-input>
