set the css fontfamily of beautynow

--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -9,7 +9,7 @@
             </a>       
       </ion-col>
       <ion-col size="4" class="ion-text-center">        
-        <a style="font-family: Montserrat,sans-serif;" routerLink="/weddings">Bodas</a>
+        <a routerLink="/weddings">Bodas</a>
       </ion-col>
       <!-- <ion-col size="4" class="ion-text-center">
         <a routerLink="/service-categories">Servicios</a>
