--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -15,7 +15,7 @@
     margin-top: 1px;
   }
   .panelTitle {
-    font-family: Playfair Display;
+    font-family: AVENIRBLACK;
     font-size: 42px;
     font-weight: 400;
     font-style: italic;
@@ -26,8 +26,6 @@
     text-shadow: 5px 2px 4px #574c4c;
     padding: 10px;
   }
-  h2 {
-    font-family: Playfair Display;
-  }
+
 }
 
