--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,15 @@ app-item-desc {
     color: white;
   }
 }
+
+body {
+  font-family:'JAAPOKKI';
+}
+
+h1, h2, h3, h4, h5, th {
+  font-family:'AVENIRBLACK';
+}
+
+ion-item, ion-button, td, a{
+  font-family:'AVENIRLIGHT';
+}
