--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -16,8 +16,10 @@
   }
   .panelTitle {
     font-family: AVENIRLIGHT;
-    font-size: 33px;
+    font-size: 30px;
     text-transform: initial;
+    text-align: center;
+    font-weight: bold;
     color: #333;   
     background: #fff;
     margin: 0px;
