--- a/src/app/core/components/modals/item-desc/item-desc.component.scss
+++ b/src/app/core/components/modals/item-desc/item-desc.component.scss
@@ -35,7 +35,7 @@ ion-datetime {
 }
 .imgbkg {
   padding: 5px;
-  background-image: url("./../../../../../assets/images/web/inicio-1.png") !important;
+  // background-image: url("./../../../../../assets/images/web/inicio-1.png") !important;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
