--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,19 +4,21 @@
     <div *ngIf="enabledCategories.includes(category.id)" class="category" (click)="category.panel=!category.panel">
    
       <ion-img src="../../../assets/images/categories/{{ category.id }}-CAT.jpg"></ion-img>
-         <p class="panelTitle">{{category.name}}</p>
+         <p class="panelTitle"> {{category.name}} </p>
     </div>
+
     <!-- -->
     <div [ngStyle]="{display: !category.panel ? 'none': 'block'}" >
       <small style="margin-left: 70px;">*precios aplican solo en Tijuana</small> 
       <div *ngFor="let service of category.services">
         <ion-list>
-          <ion-item *ngIf="enabledServices.includes(service.id)" button (click)="presentModal(service)">
+          <!-- *ngIf="enabledServices.includes(service.id)" -->
+          <ion-item button (click)="presentModal(service, '../../../../assets/images/categories/services/' + category.id + '-' + service.id + '-' + service.service_id+'.jpg')">
             <ion-avatar slot="start">
               <img src="../../../assets/images/categories/services/{{ category.id }}-{{ service.id }}-{{ service.service_id }}.jpg">
             </ion-avatar>
             <ion-label>
-              <h2>{{service.name}} </h2>
+              <h2> {{service.name}} </h2>
               <h1>${{service.public_price}}</h1>
             </ion-label>
           </ion-item>
@@ -24,4 +26,11 @@
       </div>
     </div>
   </div>
+
+  <a class="panel" routerLink="/gallery">
+  <div class="category">
+    <ion-img src="../../../assets/images/categories/services/FOTO-F-600x450.jpg"></ion-img>
+    <p class="panelTitle"> Galeria </p>
+  </div>
+</a>
 </ion-content>
