gallery done and beautiers section

--- a/src/app/feature/gallery/image-modal/image-modal.page.html
+++ b/src/app/feature/gallery/image-modal/image-modal.page.html
@@ -17,7 +17,7 @@
 <ion-slides pager="true" [options]="slideOpts" #slider>   
   <ion-slide>
     <div class="swiper-zoom-container">
-    <img src="./../../../assets/images/web/FOTO{{img}}.jpeg" />
+    <img src="{{img}}" />
   </div>
   </ion-slide>
 </ion-slides>
