--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,8 +29,15 @@
 
   <a class="panel" routerLink="/gallery">
   <div class="category">
-    <ion-img src="../../../assets/images/categories/services/FOTO-F-600x450.jpg"></ion-img>
+    <ion-img src="../../../assets/images/gallery.jpeg"></ion-img>
     <p class="panelTitle"> Galeria </p>
+  </div>
+</a>
+
+<a class="panel" routerLink="/beautiers">
+  <div class="category">
+    <ion-img src="../../../assets/images/beautiers.jpeg"></ion-img>
+    <p class="panelTitle"> Beautiers </p>
   </div>
 </a>
 </ion-content>
