--- a/src/app/core/components/side-menu/side-menu.component.html
+++ b/src/app/core/components/side-menu/side-menu.component.html
@@ -10,6 +10,20 @@
       <ion-item *ngIf="isAuthenticated" routerLink="/user-profile" (click)="close()"><ion-icon name="person-circle-outline"></ion-icon>Mi Perfil</ion-item>
       <ion-item *ngIf="!isAuthenticated" routerLink="/login" (click)="close()"><ion-icon name="log-in-outline"></ion-icon>Iniciar sesi&oacute;n</ion-item>
       <ion-item *ngIf="isAuthenticated" (click)="logout()"><ion-icon name="log-in-outline"></ion-icon>Cerrar sesi&oacute;n</ion-item>
+      
+      <ion-item routerLink="/beautiers" (click)="close()">
+        
+        <ion-icon name="people-outline" ></ion-icon>
+        Beautiers
+      </ion-item>
+
+
+      <ion-item routerLink="/gallery" (click)="close()">
+        
+        <ion-icon name="film-outline"></ion-icon>
+        Galeria
+      </ion-item>
+  
     </ion-list>
   </ion-content>
 </ion-menu>
