--- a/src/app/feature/gallery/gallery.component.scss
+++ b/src/app/feature/gallery/gallery.component.scss
@@ -7,3 +7,10 @@ ion-slides {
         padding-bottom: 20px;
     }
 }
+
+.centered {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
