andromeda style changes

--- a/src/app/feature/gallery/gallery.component.html
+++ b/src/app/feature/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <ion-header style="margin-top:80px;">
   <ion-toolbar>
-    <ion-title> Beautynow Galeria </ion-title>
+    <ion-title> Galeria </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
