--- a/src/app/feature/weddings/form/form.component.html
+++ b/src/app/feature/weddings/form/form.component.html
@@ -26,7 +26,7 @@
     </ion-item>
     <!-- quien eres -->
     <ion-item> 
-      <ion-label position="stacked">Quien eres tu?</ion-label>
+      <ion-label position="stacked">Quien eres tu? (relacion con la Novia)</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
     <!-- fecha y hora -->
