--- a/src/app/feature/weddings/weddings.component.html
+++ b/src/app/feature/weddings/weddings.component.html
@@ -13,9 +13,9 @@
           <ion-card-title></ion-card-title>
         </ion-card-header>
         <ion-card-content>
-            Por que savemos que el dia de tu boda es una fecha de las mas importantes de tu vida, tenemos a los mejores artistas en belleza para ti y tu corte.
+            Por que sabemos que el dia de tu boda es una fecha de las mas importantes de tu vida, tenemos a los mejores artistas en belleza para ti y tu corte.
             Es nuestra mision que ese dia este lleno de recuerdos bellos e inolvidables para ti y los tuyos.
-           te invitamos a llenar este cuestionario y nos comunicaremos con tigo. 
+           te invitamos a llenar este cuestionario y nos comunicaremos contigo. 
            <ion-button expand="full" (click)="openModal()" color="primary">
             Envianos tus datos
           </ion-button>
