--- a/src/app/core/components/modals/item-desc/item-desc.component.html
+++ b/src/app/core/components/modals/item-desc/item-desc.component.html
@@ -1,8 +1,7 @@
 <ion-header>
     <ion-toolbar>
       <div class="imgbkg" 
-      style = "background-image: url('{{service.image }}') !important;"
- >
+      style = "background-image: url('{{service.image }}') !important;" >
         <p (click)="closeModal()" class="close">
           <ion-icon name="close"></ion-icon>
         </p>
@@ -19,7 +18,8 @@
     <ion-grid>
         <ion-row>
           <ion-col>
-            <h2><ion-icon name="pricetags"></ion-icon>{{ service.name }}</h2>
+            <h2>{{ service.name }} </h2>
+            
           </ion-col>
         </ion-row>
         <ion-row>
