get user info and loading services added

--- a/src/app/core/components/side-menu/side-menu.component.scss
+++ b/src/app/core/components/side-menu/side-menu.component.scss
@@ -1,3 +1,9 @@
 ion-header {
     margin-top: 25px;
 }
+.loaderContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
