--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -132,12 +132,9 @@
 
                   <span *ngIf="registerForm.controls.password_confirm.hasError('minLength')" class='danger'
                   [innerHTML]="inputValidators.min6.errorMessage"></span>
-                 
                   <span *ngIf="registerForm.hasError('matchPasswordError')" class='danger'
                   [innerHTML]="inputValidators.passwordMismatch.errorMessage"></span>
-                </section>
-                
-             
+                </section>                
               </ion-col>
             </ion-row>
 
@@ -148,11 +145,11 @@
       </ion-col>
     </ion-row>
 
-    <ion-row>
+    <!-- <ion-row>
       <ion-col size="12">
         <ion-button (click)="facebookLogin()" color="secondary" expand="full" fill="outline">
           <ion-icon slot="start" name="logo-facebook"></ion-icon>Continuar con Facebook</ion-button>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
   </ion-grid>
 </ion-content>
