--- a/src/app/feature/shopping-cart/components/payment/payment.component.html
+++ b/src/app/feature/shopping-cart/components/payment/payment.component.html
@@ -138,7 +138,7 @@
               </ion-input>
             </ion-col>
           </ion-row>
-          <!-- <ion-row>
+          <ion-row>
             <ion-col size="12">
               <ion-intl-tel-input
                 inputPlaceholder="Tel&eacute;fono"
@@ -149,7 +149,7 @@
                 formControlName="phone"
               ></ion-intl-tel-input>
             </ion-col>
-          </ion-row> -->
+          </ion-row> 
         </ion-grid>
       </form>
       <!-- [disabled]="!(ccForm.touched && ccForm.valid)"  -->
